{
    "name": "InputActions",
    "maps": [
        {
            "name": "InputPlayer",
            "id": "f0d28e76-1db7-46f1-a770-d350120f8cd7",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "57ea25a1-a92c-408f-9f44-b3705851997a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "edc53438-07c0-4b04-89e7-fb8bba08ee7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "c19322a2-3116-464d-a06e-a431d186b0c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar1",
                    "type": "Button",
                    "id": "5530f6da-1e49-444f-8247-9d0ea27831c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar2",
                    "type": "Button",
                    "id": "383b42a2-d3ca-4c3b-a44d-fdf5af87f725",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar3",
                    "type": "Button",
                    "id": "48492372-e18e-40e9-b766-7b889050b8ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar4",
                    "type": "Button",
                    "id": "a0dc62df-45a4-4fc9-80d7-1bfa3af11d03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "f615dd09-0681-4e33-b293-c1a650d565da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "a865f876-4ead-4d2a-9e31-4cab7a9336c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenuFromPlayer",
                    "type": "Button",
                    "id": "dfdcce39-8878-4d6c-9c35-3e823b52013c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "574bb8d2-662e-4545-927c-0f0632454e72",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "284c067b-51f3-4eb2-9394-137c9514f7d4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "50686cfb-cea3-44ff-a913-10e0ee7f9c69",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9738d968-e1cf-4367-bf84-f75507489c27",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2f09b242-3dad-46fd-a90d-8016b889de71",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "acc51609-3974-4db8-b058-fb50fa418a0d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a1757bc-d9d5-4087-87bf-31b88669d0f0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c6f004c-2e79-492f-9bd4-dbbd6414cca8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "524eb754-5117-4b06-b670-9c2233684037",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41b7074d-ee08-46e0-8fac-4dce305f6dac",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a1fc4a5-f938-4a1d-bdb6-77b27dc63e74",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b163dc35-fc4f-4636-b23e-76b8af873c7e",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db1e2f8e-0c6e-42b2-8277-d80218ee2cd7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35b99f39-6723-44bb-9cdf-76c7ce3b6277",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenuFromPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputMenu",
            "id": "022769c2-2471-4428-968e-75acdf0f4c76",
            "actions": [
                {
                    "name": "MenuMovement",
                    "type": "Value",
                    "id": "ee042df1-981b-434a-93c8-1fcc9053b32b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClickMenu",
                    "type": "Button",
                    "id": "b7b459d5-819a-4069-bb7f-d770dbe73e59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClickMenu",
                    "type": "Button",
                    "id": "e8f617a2-2804-431b-8725-f564bb360d69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseMenu",
                    "type": "Button",
                    "id": "2aef9bbf-0e66-49f3-8a44-3c0dab413a4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e5a2cec0-a515-4b6d-ab7d-df066f50cb54",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "556f0b73-a8ac-4745-8883-ae96d3983a0c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5ded7b64-c9df-47c1-8a05-c3243f5f941a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6c2fa45d-6582-4abf-bfd3-92528670e636",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f429ab6b-2dcc-459e-b246-0007f85b721f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2a129b94-10f4-4d43-8ea5-c89d28db1353",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f9a13fc-ee7a-4278-9f3b-a03136ebc9e6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d1e8f0c-9526-4f84-8e7c-b2151f6fef63",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputUI",
            "id": "d8e2910e-e4ff-4e8c-9bdc-d3e5805f43f2",
            "actions": [
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "9ee95941-c806-498f-bb1a-47da5b64c58a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EButton",
                    "type": "Button",
                    "id": "11b9147e-e220-4339-b6b2-af6d7d66181f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClickUI",
                    "type": "Button",
                    "id": "bdc63cdc-b1c1-4258-b57c-b3b51ce897fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClickUI",
                    "type": "Button",
                    "id": "324c2003-1478-4eaf-8970-7154125b7c93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenuFromUI",
                    "type": "Button",
                    "id": "1b26a227-266e-46e3-a354-e6099a74cc11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3af9b0a-1132-4b86-a9aa-f5a409dcd158",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "264d7e7c-0fa8-48c6-a8a1-3b2a6ad8ec27",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d906c298-40cb-416e-9052-435a628d9f89",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c555ff-b758-457a-b3fb-1f555ce911c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73d994ee-a1a5-4246-80a3-cabc184ef22e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenuFromUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}